--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <form action="#" id="form-id">
         <div class="input">
-          Prénon : <input id="firstname-id" type="text" />
+          Prénom : <input id="firstname-id" type="text" />
         </div>
         <div class="input">Nom : <input id="lastname-id" type="text" /></div>
         <button id="btn-id" type="submit">Ajouter une ligne</button>
